--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
              <section  class="section section--depoimentos"> 
                 <h3 class="section__title">depoimentos</h3>
             <ul class="lista">
-            <h3 class="lista__item">depoimentos</h3>
             <li class="lista__item">"Trabalho excelente, recomendo a todos"</li>
              <li class="lista__item">"trabalho muito bom"</li>
-             <li clasa="lista__item">"profissionais de qualidade, recomendo"</li>  
+             <li class="lista__item">"profissionais de qualidade, recomendo"</li>  
              <li class="lista__item">"trabalho excelente, recomendo a todos"</li>
             <li class="lista__item">"trabalho muito bom, recomendo a todos"</li>
             </ul>
@@ -81,7 +80,7 @@
                 <label class="mensagem">Mensagem:</label>
                 <textarea class="mensagem" name="mensagem" rows="5" placeholder="Digite sua mensagem" required></textarea>
 
-                <button class="submit">Enviar</button> 
+                <button type="submit" class="submit">Enviar</button> 
             </form>
         </ul>
     
