Atualiza estilos e estrutura do projeto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <section class="section section--sobre">
                 <h2 class="section__title">sobre nos</h2>
-         <ul classe ="lista">
+         <ul class="lista">
             <li class="lista__item">ola somos do ramo de tintas grafiatos e textura.</li>
             <li class="lista__item">Somos fabricantes de tintas e texturas</li>
             <li class="lista__item">temos grafiato granfino textura lisa/design textura projetada</li>
